# agent-relay-mcp

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLIC-SNAPSHOT.json  README.md  SECURITY.md  package.json  pyproject.toml
.github/: allowed_signers  dependabot.yml
.github/workflows/: ci.yml  live-gate.yml  release.yml  security.yml
demo/: PROMPTS.md  RECORDING.md  TRANSCRIPT.md  metadata.json
demo/fixture/: crossbar_demo.py  relay_demo.py
docs/releases/: v0.1.3.md  v0.2.0.md  v0.3.0.md
scripts/: live_smoke.py  provider_surface_gate.py
src/agent_crossbar/: __init__.py  acp_client.py  acp_lifecycle.py  acp_runtime.py  agent_runner.py  cli.py  discovery.py  discovery_runner.py  env_compat.py  envelope.py  jobs.py  models.py  providers.py  readiness.py  runner.py  server.py  shell_server.py  telemetry.py  tmux_output.py  validation.py
src/agent_crossbar/adapters/: __init__.py  base.py  claude.py  claude_model_probe.py  codex.py  opencode.py  registry.py
src/agent_crossbar/profiles/: __init__.py  chatgpt_pro.py  claude.py  codex.py  opencode.py  reasonix.py
src/agent_harness_mcp/: __init__.py
src/agent_relay_mcp/: acp_runtime.py  agent_runner.py  cli.py  context.py  discovery.py  discovery_runner.py  env_compat.py  envelope.py  jobs.py  model_cache.py  providers.py  readiness.py  redaction.py  runner.py  server.py  shell_server.py  validation.py
src/agent_relay_mcp/adapters/: __init__.py  chatgpt_pro.py  claude.py  claude_model_probe.py  reasonix.py
src/agent_relay_mcp/profiles/: __init__.py  chatgpt_pro.py  opencode.py  reasonix.py
tests/: test_acp_agent.py  test_acp_client.py  test_acp_runtime_direct.py  test_capability_validation.py  test_claude_adapter.py  test_claude_agent_integration.py  test_claude_model_probe.py  test_context.py  test_demo_assets.py  test_discovery.py  test_envelope.py  test_jobs.py  test_local_e2e_dev_start.py  test_minimal_public_contract.py  test_npm_launcher.py  test_package_metadata.py  test_policy_validation.py  test_provider_adapters.py  test_provider_surface_gate.py  test_providers.py  test_readiness.py  test_redaction.py  test_runner.py  test_scaffold.py  test_server_tools.py  test_telemetry.py  test_tmux_output.py  test_tool_surface_audit.py  test_validation.py
