[project]
name = "agent-relay-mcp"
version = "0.1.3"
description = "Agent Relay MCP — delegate review, advice, text, and dev work to local coding agents through MCP"
requires-python = ">=3.11"
dependencies = [
    "agent-client-protocol>=0.11.0",
    "mcp[cli]>=1.26.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
agent-relay-mcp = "agent_relay_mcp.cli:main"
agents-mcp = "agent_relay_mcp.server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_relay_mcp", "src/agent_harness_mcp"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".reasonix/",
    ".memsearch/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".DS_Store",
    "*.tgz",
    "results/",
    "scripts/",
    "bin/agent-harness-mcp.mjs",
    "workspace_test_output.txt",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
